objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Arpit__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Arpit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Expense__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date of Expense</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_Everyone_Share_Equal_Amount__c</fullName>
        <label>Does Everyone Share Equal Amount?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Owner__c</fullName>
        <label>Expense Owner</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arpit</fullName>
                </value>
                <value>
                    <fullName>Harsh</fullName>
                </value>
                <value>
                    <fullName>Krutarth</fullName>
                </value>
                <value>
                    <fullName>Palak</fullName>
                </value>
                <value>
                    <fullName>Purav</fullName>
                </value>
                <value>
                    <fullName>Rutvi</fullName>
                </value>
                <value>
                    <fullName>Tirth</fullName>
                </value>
                <value>
                    <fullName>Urvish</fullName>
                </value>
                <value>
                    <fullName>Nirali</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Coffee/Snacks</fullName>
                </value>
                <value>
                    <fullName>Activity Fees</fullName>
                </value>
                <value>
                    <fullName>Uber/Lyft</fullName>
                </value>
                <value>
                    <fullName>Car Rental</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Air Fare</fullName>
                </value>
                <value>
                    <fullName>Liquor</fullName>
                </value>
                <value>
                    <fullName>Stay during the trip</fullName>
                </value>
                <value>
                    <fullName>Personal Shopping</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Harsh__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Harsh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Krutarth__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Krutarth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nirali__c</fullName>
        <label>Nirali</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Palak__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Palak</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Expense_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Expense Lookup</label>
        <referenceTo>Total_Expense__c</referenceTo>
        <relationshipLabel>Expense (Parent Expense Lookup)</relationshipLabel>
        <relationshipName>Expense1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Expense__c</fullName>
        <label>Parent Expense</label>
        <referenceTo>Total_Expense__c</referenceTo>
        <relationshipLabel>Expense</relationshipLabel>
        <relationshipName>Expense</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Personal_Expense__c</fullName>
        <label>Personal Expense?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <formula>IMAGE("/servlet/servlet.FileDownload?file=0156A000001hvaY", "Product Photo", 160, 119)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purav__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Purav</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rutvi__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Rutvi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Share_Expense_with_Everybody__c</fullName>
        <label>Share Expense with Everybody</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tirth__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Tirth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Urvish__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Urvish</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Who_do_you_share_this_expense_with__c</fullName>
        <label>Who do you share this expense with?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Share_Expense_with_Everybody__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arpit</fullName>
                </value>
                <value>
                    <fullName>Palak</fullName>
                </value>
                <value>
                    <fullName>Urvish</fullName>
                </value>
                <value>
                    <fullName>Rutvi</fullName>
                </value>
                <value>
                    <fullName>Purav</fullName>
                </value>
                <value>
                    <fullName>Harsh</fullName>
                </value>
                <value>
                    <fullName>Krutarth</fullName>
                </value>
                <value>
                    <fullName>Tirth</fullName>
                </value>
                <value>
                    <fullName>Nirali</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Expense</label>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Expense_Shared_Equally</fullName>
        <active>true</active>
        <description>Please select this record type if the expense share equal amount</description>
        <label>Expense Shared Equally</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expense_Shared_Unequally</fullName>
        <active>true</active>
        <description>Please select this record type if the expense shares different amount</description>
        <label>Expense Shared Unequally</label>
    </recordTypes>
    <recordTypes>
        <fullName>Personal_Expense</fullName>
        <active>true</active>
        <description>Please select this record type for personal expense</description>
        <label>Personal Expense</label>
    </recordTypes>
    <validationRules>
        <fullName>Total_Expense_Shared_Unequally</fullName>
        <active>true</active>
        <errorConditionFormula>RecordTypeId = '0126A000000BERR'  &amp;&amp;  Expense_Amount__c  &lt;&gt;  (Urvish__c+Rutvi__c+Arpit__c+Palak__c+Purav__c+Krutarth__c+Harsh__c+Tirth__c+Nirali__c)</errorConditionFormula>
        <errorMessage>Expense amount must match total of expense shared by individuals</errorMessage>
    </validationRules>
</CustomObject>